
4.3.2 -> 4.3.3:
	- bump micro version.
	- make peace with libtool-1.5.10 and automake-1.9.3.
	- python: add python 2.4 support.
	- selinux: use rpm_execcon, not execv, to run scriptlets (#136848).
	- fix: segfault on --verifydb (#138589).
	- sparcv8: optflags changed to -mtune=ultrasparc (#140420).
	- port to internal file-4.10 libmagic rather than libfmagic.

4.3.1 -> 4.3.2:
	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
	- disable file contexts into package metadata during build.
	- fix: "/path/foo.../bar" was losing a dot (#123844).
	- lua embedded in rpmio.
	- use lua to identify desired selinux file context regexes.
	- add 'requires' and 'conflicts' tag aliases.
	- python: return ds, not tuple, for ds iteration.
	- python: permit integer keys to ts.dbMatch().
	- xml: use <foo/> markup for empty tags.
	- xml: <integer/> instead of <integer>0</integer> markup.
	- fix: disable fingerprint generation on kernel paths.
	- add ppc8[25]60 arches.
	- fix: evaluate rather than default file_contexts path. (#127501).
	- avoid "can't happen" recursion while retrieving pubkeys.
	- add ppc32dy4 arch.
	- make peace with automake 1.9.1.
	- fix: defattr for rpm-libs (#130461).
	- print dependency loops as warning iff --anaconda is specified.
	- fix: mark uninstalled elf32 files in rpmdb to disable -Va checks.
	- ia64: add autorelocate_dcolor to macros.in.
	- disable static linking until libc*.a provides symbols.
	- fix: revert Obsoletes: "fix" (#134497).
	- fix: work around for dangling symlinks not globbed (#134362).
	- display caught signals to diagnose #134474 (gonna be SIGPIPE).
	- display N-V-R.A in dependency failure messages.
	- selinux: set "rpm_script_t" always, not just for /bin/sh.
	- honor inherited SIG_IGN when establishing rpmdb signal exit (#134474).
	- don't add time stamp to compressed man pages (#132526).
	- python: remove ".A" from creaky ts.check() tuple return (#135008).