@@ -183,8 +183,6 @@ do
     touch $RPM_BUILD_ROOT/var/lib/rpm/$dbi
 done
 
-# - serialize rpmtsRun() using fcntl on /var/lock/rpm/transaction.
-mkdir -p ${RPM_BUILD_ROOT}/var/lock/rpm
 %endif
 
 %if %{with_apidocs}
@@ -278,7 +276,6 @@ exit 0
 #%config(noreplace,missingok)	/etc/rpm/macros.*
 %attr(0755, @RPMUSER@, @RPMGROUP@)	%dir /var/lib/rpm
 %attr(0755, @RPMUSER@, @RPMGROUP@)	%dir /var/spool/repackage
-%attr(0755, @RPMUSER@, @RPMGROUP@)	%dir /var/lock/rpm
 
 %define	rpmdbattr %attr(0644, @RPMUSER@, @RPMGROUP@) %verify(not md5 size mtime) %ghost %config(missingok,noreplace)
 %rpmdbattr	/var/lib/rpm/*
